Fix reviews title having too small area

--- a/react/src/styles/App.module.scss
+++ b/react/src/styles/App.module.scss
@@ -308,8 +308,7 @@ a:hover {
 
     &--lecture-detail {
         &--list-area {
-            min-height: calc(100% - 14px) !important;
-            padding-top: 6px;
+            min-height: calc(100% - (14px + 6px)) !important;
         }
     }
 
@@ -1187,6 +1186,8 @@ a:hover {
 
     .section-content--lecture-detail & {
         display: inline-block;
+        width: 100%;
+        padding-bottom: 6px;
         cursor: pointer;
 
         & > span {
